--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Mon site !
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+		{% block stylesheets %}
+			<link rel="stylesheet" href="{{asset('css/style.css')}}">
+		{% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
-</html>
+	</head>
+	<body>
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<a class="navbar-brand" href="{{ path('index')}}">Mon site</a>
+
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Article</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Catégorie</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<div class="container"> {% block body %}{% endblock %}
+			</div>
+			<footer>
+				<div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+					© 2023 Copyright:
+					<a class="text-reset fw-bold" href="#">Lamia El Khoukhi</a>
+				</div>
+			</footer>
+			{% block javascripts %}{% endblock %}
+		</body>
+	</html>
