--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,7 @@
 
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Article</a>
+						<a class="nav-link" href="{{path('allProducts')}}">Produits</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Catégorie</a>
