creation d'un barre de pagination

--- a/templates/default/detail.html.twig
+++ b/templates/default/detail.html.twig
@@ -7,11 +7,11 @@
 	<h1>{{titre}}</h1>
 	{% for element in item %}
 		<div class="article">
-			<img src="{{element.image}}" alt="{{element.image}}" style="heigth:5rem">
+			<img src="{{asset(element.image)}}" alt="{{element.image}}" style="height:15rem">
 			<h3>{{element.name}}</h3>
 			<p>{{element.description}}</p>
 			<div classe="prix">
-				<p>{{element.price}}</p>
+				<p>{{element.price}}€</p>
 				<a class="btn btn-success" href="#">Acheter</a>
 			</div>
 		</div>
