--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -13,9 +13,12 @@
 		{% for element in tab %}
 			<li class="article">
 				<img src="{{asset(element.image)}}" alt="{{element.image}}" style="height:15rem">
-				<h3>{{element.name}}</h3>
+				<h3>{{element.name}}
+					-
+					{{element.category.name}}</h3>
 				<div class="prix">
-					<p>{{element.price}}€</p>
+					<p>{{element.price}}€
+					</p>
 					<a class="btn btn-success" href="{{ path('detail',{'name':element.name}) }}">En savoir plus</a>
 				</div>
 			</li>
