--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -20,12 +20,20 @@
 	</div>
 
 
-	<ul>
+	<ul class="articles">
 		{% for e in produit_par_category %}
 
-			<li>nom:{{e[0].name}}
-				- prix:
-				{{e[0].price}}€</li>
+			<li class="article">
+				<img src="{{asset(e[0].image)}}" alt="{{e[0].image}}" style="height:15rem">
+				<h3>{{e[0].name}}
+					-
+					{{e[0].category.name}}</h3>
+				<div class="prix">
+					<p>{{e[0].price}}€
+					</p>
+					<a class="btn btn-success" href="{{ path('detail',{'name':e[0].name}) }}">En savoir plus</a>
+				</div>
+			</li>
 
 		{% endfor %}
 
