--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,6 +26,10 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{path('indexCategory')}}">Catégorie</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('contact')}}">Contact</a>
+					</li>
+
 				</ul>
 			</nav>
 		</header>
