--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -7,6 +7,11 @@
 
 {% block body %}
 
+
+	{% for message_session in app.flashes('notice') %}
+		<p class="alert alert-success">{{ message_session }}</p>
+	{% endfor %}
+
 	<h1>{{titre}}</h1>
 	<h2>produits au hasard</h2>
 	<ul class="articles">
