--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-around">
 				<a class="navbar-brand" href="{{ path('index')}}">Mon site</a>
 
 				<ul class="navbar-nav">
@@ -29,8 +29,28 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{path('contact')}}">Contact</a>
 					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('search')}}">Search</a>
+					</li>
 
 				</ul>
+
+				<ul class="navbar-nav">
+
+					{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('app_logout')}}">Deconnexion</a>
+						</li>
+					{% else %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('app_register')}}">Créer un compte</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('app_login')}}">Connexion</a>
+						</li>
+					{% endif %}
+				</ul>
+
 			</nav>
 		</header>
 		<div class="container"> {% block body %}{% endblock %}
