--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,6 +59,8 @@
 				<div class="text-center p-4" style="background-color: #c7c0c0;">
 					© 2023 Copyright:
 					<a class="text-reset fw-bold" href="#">Lamia El Khoukhi</a>
+
+					<a class="nav-link" href="{{path('admin')}}">Admin</a>
 				</div>
 			</footer>
 			{% block javascripts %}{% endblock %}
