--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,15 +6,17 @@
 			{% block title %}Mon site !
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{asset('css/style.css')}}">
 		{% endblock %}
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 
 	</head>
-	<body>
+	<body style="min-height: 100vh;">
+
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-around">
 				<a class="navbar-brand" href="{{ path('index')}}">Mon site</a>
@@ -53,15 +55,19 @@
 
 			</nav>
 		</header>
-		<div class="container"> {% block body %}{% endblock %}
+		<div class="container" style="margin-bottom: 4rem;"> {% block body %}{% endblock %}
 			</div>
-			<footer class="fixed-bottom">
-				<div class="text-center p-4" style="background-color: #c7c0c0;">
-					© 2023 Copyright:
-					<a class="text-reset fw-bold" href="#">Lamia El Khoukhi</a>
 
-					<a class="nav-link" href="{{path('admin')}}">Admin</a>
-				</div>
+			<footer class="footer" style="position: absolute;
+																																																												padding-top: 0.5rem;
+																																																												padding-bottom: 0.5rem;
+																																																												background-color: #a8a6a6;
+																																																												width: 100%;
+																																																												text-align: center;">
+				<p>© 2023 Copyright:
+					<a class="text-reset fw-bold" href="#">Lamia El Khoukhi</a>
+				</p>
+				<a class="nav-link" href="{{path('admin')}}">Admin</a>
 			</footer>
 			{% block javascripts %}{% endblock %}
 		</body>
